<resources>
    <string name="app_name">Palmtree for Naamapalmu</string>
    <string name="app_name_launcher">Palmtree</string>
    <string name="activity_main_title">Palmtree - %s</string>

    <string name="leak_canary_display_activity_label">Palmtree (leaks)</string>
    <string name="error_page_load">Failed to load page, try again</string>
    <string name="badge_gif" translatable="false">GIF</string>
    <string name="action_share">Share</string>
    <string name="action_share_title">Share link using</string>
    <string name="action_list">Listing</string>
    <string name="action_list_frontpage">Front page</string>
    <string name="action_list_images">Latest images</string>
    <string name="action_settings">Settings</string>
    <string name="action_list_videos">Latest videos</string>
    <string name="frontpage">front page</string>
    <string name="latest_images">latest images</string>
    <string name="latest_videos">latest videos</string>
    <string name="hint_swipe">Tip: swipe right to get back quickly!</string>
    <string name="action_list_all">Latest (all)</string>
    <string name="latest_all">latest (all)</string>
    <string name="content_description">Funny image/video</string>
    <string name="changelog_title">Changelog - %s</string>
    <string name="ok" translatable="false">OK</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_feedback">Feedback</string>
    <string name="pref_feedback_summary">Report bugs and suggest new features.</string>
    <string name="pref_theme_summary">Change the app\'s theme.</string>
    <string name="dialog_listing_quality_title">Thumbnail quality</string>
    <string name="dialog_listing_quality_content">Please note that due to the way Palmtree loads data for categories latest (all) and latest videos, the thumbnails are of low quality. Opening images in detail view will behave normally.</string>
    <string name="dialog_licenses_title">Licenses</string>
    <string name="pref_licenses">Licenses</string>
    <string name="pref_licenses_summary">Third party library licenses.</string>
    <string name="pref_customization">Customization</string>
    <string name="pref_other">Other</string>
    <string name="pref_confirm_exit">Confirm exit</string>
    <string name="pref_general">General</string>
    <string name="pref_show_nsfw">Show NSFW content</string>
    <string name="pref_swipe_back">Swipe to return</string>
    <string name="pref_swipe_back_summary">Swipe to return from detail view or settings.</string>
    <string name="pref_click_back_summary">Click to return from detail view.</string>
    <string name="pref_click_back">Click to return</string>
    <string name="pref_toolbar_hide">Autohide toolbar</string>
    <string name="pref_toolbar_hide_summary">Hide the toolbar when scrolling.</string>
    <string name="pref_changelog">Show changelog</string>
    <string name="pref_changelog_summary">Show changelog after app update.</string>
    <string name="pref_category">Default category</string>
    <string name="pref_category_summary">Change the default category.</string>
    <string name="random">random</string>
    <string name="pref_rate">Rate the app</string>
    <string name="pref_rate_summary">Rate the app on the Play store.</string>
    <string name="pref_save_data">Save data</string>
    <string name="pref_save_data_summary">Save data by not downloading preview images.</string>
    <string name="action_list_random">Random</string>
    <string-array name="pref_themes">
        <item>Light (day)</item>
        <item>Dark (night)</item>
        <item>Automatic</item>
    </string-array>
    <string-array name="pref_themes_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="pref_category">
        <item>@string/action_list_frontpage</item>
        <item>@string/action_list_images</item>
        <item>@string/action_list_videos</item>
        <item>@string/action_list_all</item>
        <item>@string/action_list_random</item>
    </string-array>
    <string-array name="pref_category_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <!-- never-ending TODO: update changelog -->
    <string name="changelog">• Added new categories\n• Image descriptions are now shown in the list\n• Save data by turning off preview images\n• Long click an image to see details quickly\n• New customization options\n\n• Click an error notification to see details\n• Fixed bugs and improved performance</string>
    <string name="dialog_confirm_exit">Confirm exit</string>
    <string name="dialog_confirm_exit_content">Are you sure you want to exit?</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_image_info_content" formatted="false"><![CDATA[<b>Description:</b><br>%s<br><br><b>Rating:</b><br>%s<br><br><b>NSFW:</b><br>%b<br><br><b>Metadata:</b><br>%s]]></string>
    <string name="action_details">Details</string>
    <string name="retry">Retry</string>
    <string name="dialog_error_content"><![CDATA[<b>Exception thrown:</b> %s<br><br>This should not happen. Sorry!]]></string>
    <string name="dialog_error_title">Error details</string>
    <string name="error_internet_connection">No internet connection</string>
    <string name="error_detail_load">Failed to load details</string>
    <string name="error_unsupported">Only images or videos are supported</string>
</resources>
